--- a/index.html
+++ b/index.html
@@ -1,81 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dashboard</title>
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bayon&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap">
 </head>
-  </head>
-  <body class="mobile">
-    <header>
+<body class="mobile">
+  <header>
     <div class="header-content">
       <div class="mobile-menu" onclick="toggleMenu()">
         <i class="fas fa-bars"></i>
       </div>
-        <h1>Dashboard</h1>
-        <div class="dropdown-wrapper">
-          <div class="dropdown">
-            <div class="dropdown-menu">
-              <button class="menu-btn" id="dependenciaBtn">
-                Dependência<i class="fas fa-chevron-up"></i>
-              </button>
-              <div class="dropdown-content" id="dependenciaContent">
-                <a href="#">Escola Pública</a>
-                <a href="#">Escola Privada</a>
-              </div>
-            </div>
-  
-            <div class="dropdown-menu">
-              <button class="menu-btn" id="estadosBtn">
-                Estado <i class="fas fa-chevron-up"></i>
-              </button>
-              <div class="dropdown-content" id="estadosContent">
-                <a href="#">Estado</a>
-                <a href="#">Pernambuco</a>
-                <a href="#">Bahia</a>
-                <a href="#">São Paulo</a>
-              </div>
-            </div>
-  
-            <div class="dropdown-menu">
-              <button class="menu-btn" id="comparacaoBtn">
-                Comparar <i class="fas fa-chevron-up"></i>
-              </button>
-              <div class="dropdown-content" id="comparacaoContent">
-                <a href="#">São Paulo</a>
-                <a href="#">Bahia</a>
-              </div>
-            </div>
-  
-            <button id="searchButton"><i class="fas fa-search"></i></button>
+      <h1>Dashboard</h1>
+      <div class="dropdown-wrapper">
+        <div class="dropdown">
+          <div class="dropdown-menu">
+            <label for="dependenciaSelect">Dependência</label>
+            <select id="dependenciaSelect">
+              <option value="1">Escola Pública</option>
+              <option value="2">Escola Privada</option>
+            </select>
           </div>
-          <div class="download"><i class="fas fa-download"></i> PNG</div>
+
+          <div class="dropdown-menu">
+            <label for="estadoSelect">Estado</label>
+            <select id="estadoSelect"></select>
+          </div>
+
+          <!-- Novo select para o segundo estado -->
+          <div class="dropdown-menu">
+            <label for="estadoSelect2">Outro Estado</label>
+            <select id="estadoSelect2"></select>
+          </div>
+
+          <button id="searchButton"><i class="fas fa-search"></i></button>
         </div>
+        <div class="download"><i class="fas fa-download"></i> PNG</div>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <main>
-      <h2 class="main-title">Equipamentos Eletrônicos em Bibliotecas Escolares - 2022</h2>
-      <div class="charts">
-        <div class="chart-container" id="chartContainer1"></div>
-        <div class="chart-container" id="chartContainer2"></div>
-        <div class="chart-container" id="chartContainer3"></div>
-      </div>
-      <footer>
-        <p>Grupo 5 - Fernando Marino, Sol de Lotus, Giovana Salgado, Alessandra Mendes e Hannah Sales</p>
-      </footer>
-    </main>
+  <main>
+    <h2 class="main-title">Equipamentos Eletrônicos em Bibliotecas Escolares - 2022</h2>
+    <div class="charts">
+      <div class="chart-container" id="chartContainer1"></div>
+      <h3 class="pie-text">Qtd. Bibliotecas</h3>
+      <div class="chart-container" id="chartContainer2"></div>
+      <h3 class="pie-text">Qtd. Bibliotecários</h3>
+      <div class="chart-container" id="chartContainer3"></div>
+      <div id="chartContainer4"></div>
+    </div>
+    <footer>
+      <p>Grupo 5 - Fernando Marino, Sol de Lotus, Giovana Salgado, Alessandra Mendes e Hannah Sales</p>
+    </footer>
+  </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="js/main.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="js/main.js"></script>
+</body>
 </html>
