fix back routes

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
           <div class="dropdown-menu">
             <label for="estadoSelect">Estado</label>
-            <select id="estadoSelect"></select>
+            <select id="estadoSelect">
+              
+            </select>
           </div>
-
-          <!-- Novo select para o segundo estado -->
           <div class="dropdown-menu">
             <label for="estadoSelect2">Outro Estado</label>
             <select id="estadoSelect2"></select>
